// Copyright (c) HashiCorp, Inc.
// SPDX-License-Identifier: MPL-2.0

syntax = "proto3";

package hashicorp.consul.mesh.v2beta1;

import "pbresource/annotations.proto";

// MeshConfiguration is responsible for configuring the default behavior of Mesh Gateways.
// This is a Resource type.
message MeshConfiguration {
  option (hashicorp.consul.resource.spec) = {scope: SCOPE_CLUSTER};
}
